css/main.css
body,
html {
    height: 100%;
    font-size: 16px;
    font-family: "Lato", sans-serif;
    font-weight: 400;
    line-height: 1.8em;
    color: #666;
    margin: 0;
    display: flex;
    flex-direction: column;
    scroll-behavior: smooth;
}


/*styling for navigation bar.ul*/

#nav {
    overflow: hidden;
    background-color: #8D8B87;
    position: fixed;
    /* Set the navbar to fixed position */
    right: 0;
    left: 0;
    z-index: 1;
    top: 0;
    /* Position the navbar at the top of the page */
    width: 100%;
    /* Full width */
    text-align: center;

}



ul {
    display: inline-flex;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #8D8B87;




}

li {
    float: left;
}

li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: x-large;
}

/* Change the link color to #111 (black) on hover */
li a:hover {
    background-color: #C0C0C0;

}



/*styling for parallax effect*/

.pimg1,
.pimg2,
.pimg3 {
    position: relative;
    opacity: 0.70;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;

    /*this is really what gives it a parallax effect, you will scroll if you want to turn it off*/
    background-attachment: fixed;


}

.pimg1 {
    background-image: url("../images/image1.jpg");
    min-height: 100%;

}



.pimg2 {
    background-image: url("../images/image2.jpg");
    min-height: 400px;
}



.pimg3 {
    background-image: url("../images/image3.jpg");
    min-height: 400px;
}


.section {
    text-align: center;
    padding: 50px 80px;
}

.section-light {
    background-color: #f4f4f4;
    color: #666;
}

.section-dark {
    background-color: #282e34;
    color: #ddd;
}

.ptext {
    position: absolute;
    top: 50%;
    width: 100%;
    text-align: center;
    font-size: 27px;
    letter-spacing: 8px;
    text-transform: uppercase;
}

.ptext .border {
    background-color: #8D8B87;
    color: #fff;
    padding: 20px;
}

.ptext .border.trans {
    background-color: transparent;
}


@media(max-width: 568px) {

    .pimg1,
    .pimg2,
    .pimg3 {
        background-attachment: scroll;
    }
}


/*styling for the cards*/

.section-flex {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    align-content: space-between;
}

.card {
    /* Add shadows to create the "card" effect */
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    max-width: 30%;

}







/* On mouse-over, add a deeper shadow */
.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

/* Add some padding inside the card container */
.container {
    padding: 2px 16px;
}

.card img {
    max-width: 100%;
    height: auto;
}


/*styling for 2 columns*/
.column2 {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    align-items: center;

}


.column {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    max-width: 40%;
    padding: 5%;


}

.column img {
    max-width: 100%;
    height: auto;

}


/*button styling*/
div button {
    position: absolute;
    right: 3%;
    bottom: 2%;
    background: transparent;
    display: block;
    cursor: pointer;
}




#myBtn:hover {
    background-color: #555;
    /* Add a dark-grey background on hover */
}


/*styling for form*/
input[type=text],
select,
textarea {
    width: 75%;
    padding: 15px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 20px;
    resize: vertical;
}

.container2 {
    border-radius: 10px;
    background-color: #d4ddb3;
    padding: 10px;
    color: black;
}

textarea {
    margin-bottom: 0%;
    margin-left: 2%;
}





/*media queries*/
@media screen and (max-width: 600px) {
    .column {
        max-width: 100%;
    }

    .card {
        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
        transition: 0.3s;
        max-width: 100%;
    }

    .ptext {
        position: absolute;
        top: 50%;
        width: 100%;
        text-align: center;
        font-size: 18px;
        letter-spacing: 4px;
        text-transform: uppercase;
    }

    .section {
        text-align: center;
        padding: 20px 20px;
    }



}

